manifest/aws-lb-networklb.yml
---
apiVersion: v1 
kind: Service
metadata:
  name: frontend-lb-service
  namespace: development
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external 
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 8000
    targetPort: 8080
